--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -101,9 +101,9 @@
         android:id="@+id/grid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/body"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentBottom="false"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/body">
 
         <CheckBox
             android:id="@+id/cb_mouth"
